fix unchecked warnings + format